--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@expo/vector-icons": "^12.0.5",
     "@react-navigation/native": "^5.9.4"
   },
   "private": true
