--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/stack": "^5.14.5",
@@ -29,7 +30,8 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@expo/vector-icons": "^12.0.5",
-    "@react-navigation/native": "^5.9.4"
+    "@react-navigation/native": "^5.9.4",
+    "react-native-uuid": "^2.0.1"
   },
   "private": true
 }
