--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-calendars": "^1.1260.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-interactable": "^2.0.1",
     "react-native-paper": "^4.8.1",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
