--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "1.9.11",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/stack": "^5.14.5",
     "expo": "~41.0.1",
