--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-background-timer": "^2.4.1",
     "react-native-calendars": "^1.1260.0",
     "react-native-modal": "^11.10.0",
     "react-native-paper": "^4.8.1",
