--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^5.14.5",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
+    "expo-brightness": "~9.1.2",
     "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "moment": "^2.29.1",
